--- a/src/db/app.json
+++ b/src/db/app.json
@@ -216,7 +216,7 @@
   "event": [
     {
       "id": 1,
-      "date": "2019-01-01",
+      "date": "2019-04-02",
       "hour": "12:30",
       "table": 1,
       "repeat": false,
@@ -265,6 +265,17 @@
       "starters": ["lemonWater"]
     }
   ],
-  "booking": []
+  "booking": [
+    {
+      "id": 2,
+      "date": "2019-04-02",
+      "hour": "10:30",
+      "table": 1,
+      "repeat": false,
+      "duration": 4,
+      "ppl": 3,
+      "starters": []
+    }
+  ]
 
 }
